# lyricue

./: .bzrignore  .gitignore  AUTHORS  ChangeLog  Development.txt  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  access.conf  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.ac  conv2.6  convert_export_to_opensong_format.sh  default.conf  import_media  import_media.1  install  libtool  lyricue  lyricue.1  lyricue.desktop  lyricue.glade  lyricue.gladep  lyricue.spec  lyricue_mini.glade  lyricue_preview  lyricue_preview.1  lyricue_remote  lyricue_remote.1  lyricue_server  lyricue_server.1  lyricue_server.desktop  mkdist  (+4 more)
.bzr-builddeb/: default.conf
bibles/debian/KJV/: control  dirs  rules
bibles/debian/MES/: control
bibles/debian/NIV/: changelog  postinst  rules
bibles/debian/NLT/: rules
data/: Add_Profiles.sql  Add_ip.sql  Add_snapshot.sql  Create_lyricDb.sql  Create_mediaDb.sql  Makefile.am  Makefile.in  Update_1.2.sql  Update_1.9.4.sql  Update_1.9.sql  Update_2.4.sql  Update_3.6.sql  assistantFirstRun.ui  default.conf  dialogAdmin.ui  dialogAdminLogin.ui  dialogColour.ui  dialogConfirm.ui  dialogDatabase.ui  dialogDirChooser.ui  dialogDvd.ui  dialogError.ui  dialogFileChooser.ui  dialogFont.ui  dialogImage.ui  dialogImportData.ui  dialogLoop.ui  dialogPrefs.ui  dialogPromptCombo.ui  dialogPromptEntry.ui  dialogSearch.ui  dialogSelectCategory.ui  dialogSelectSongs.ui  dialogWindowOffset.ui  lyricue-crashdb.conf  lyricue.desktop  lyricue.glade  lyricue_display.desktop  source_lyricue.py  windowAbout.ui  (+6 more)
debian/: README.Debian  README.debian  README.source  changelog  changelog-cvs  changelog-dev  changelog-release  conffiles  config  control  control-intrepid  control-jaunty  control-karmic  control-lucid  copyright  dirs  lyricue-kjvdb.changelog  lyricue-kjvdb.files  lyricue-kjvdb.postinst  lyricue-kjvdb.postrm  lyricue-nivdb.changelog  lyricue-nivdb.copyright  lyricue-nivdb.files  lyricue-nivdb.postinst  lyricue-nivdb.postrm  lyricue.desktop  lyricue_server.1  lyricue_server.desktop  manpages  menu  menu-base  postinst  postrm  rules  rules-base  templates
debian/bibles/KJV/: changelog  control  postinst  postrm  rules
debian/bibles/MES/: changelog  control  postinst  postrm  rules
debian/bibles/NIRV/: changelog  control  postinst  postrm  rules
debian/bibles/NIV/: changelog  control  postinst  postrm  rules
debian/bibles/NLT/: changelog  control  copyright  postinst  postrm  rules
debian/po/: bg.po  de.po  en_AU.po  en_GB.po  es.po  es_ES.po  fr.po  nl.po  pt.po  pt_BR.po  templates.pot  tr.po
docs/: Development.txt  INSTALL  NEWS  README  TODO  User_Guide.book  User_Guide.sxw  User_Guide_title.html  Users_Guide.tex  addedit.eps  example_song.txt  interface.eps  update_robodoc.pl
help/: Makefile.am  Makefile.in  lyricue.xml
help/C/: index.docbook
images/: lyricue-icon.xpm
mysql/: Create_lyricDb.sql  MySQL_create_Table.sql  MySQL_create_media.sql  Update_1.9.2.sql  Update_1.9.7.sql  Update_2.1.0.sql  lyricDb_table.sql
po/: LINGUAS  Makefile.in  POTFILES  POTFILES.in  af.po  da.po  de.po  en_AU.po  en_GB.po  en_US.po  es.po  es_ES.po  fr.po  id.po  install_translations  lyricue.pot  messages.po  nl.po  oc.po  pt.po  pt_BR.po  sr.po  sv.po  template-po  tr.po  update_pot
src/: Makefile.am  Makefile.in  avahi.c  avahi.h  bible.c  bible.h  database.c  database.h  display.c  display.h  i18n.h  lyricue  lyricue_display.c  lyricue_display.h  lyricue_remote  main.c  utils.c  utils.h  val.xml
