@YELP_HELP_RULES@
HELP_ID = lyricue
HELP_FILES = index.docbook
HELP_MEDIA = \
	figures/apt.jpg \
	figures/docs-add-song.jpg \
	figures/docs-bible-import.jpg \
	figures/docs-import-songs.jpg \
	figures/docs-import-songs-select.jpg \
	figures/docs-main-bgs.jpg \
	figures/docs-main-bible.jpg \
	figures/docs-main-imgs_0.jpg \
	figures/docs-main-playlist_0.jpg \
	figures/docs-main-playlists.jpg \
	figures/docs-main-previews.jpg \
	figures/docs-main-sections.jpg \
	figures/docs-main-songs.jpg \
	figures/docs-main-trans.jpg \
	figures/docs-wizard-confirm.jpg \
	figures/docs-wizard-db.jpg \
	figures/docs-wizard-dirs.jpg \
	figures/docs-wizard-fonts.jpg \
	figures/docs-wizard-intro.jpg \
	figures/docs-wizard-pg6.jpg \
	figures/docs-wizard-proj.jpg \
	figures/lyricue.png \
	figures/multi-machine-setup.png \
	figures/sources.jpg

#HELP_LINGUAS =
